# Demo__FastAPI

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.eks  Dockerfile.lambda  README.md  flyway.conf  hypercorn.toml  package.json  pyproject.toml  pytest.ini  ruff.toml  serverless.yml  update-deps.sh
.claude/: settings.local.json
.github/workflows/: commit-and-push-version.yml  deploy-prod.yml  deploy-sandbox-qa.yml  ruff.toml  test.yml
app/: main.py
app/apdapter/: auth.py  event.py  orm.py  repository.py  uow.py
app/api/v1/: admin.py  notice.py  user.py
app/application/admin/: command.py  event.py  model.py  query.py  router.py  schema.py  uow.py
app/application/admin/account/: command.py  handler.py  model.py  query.py  router.py  uow.py
app/application/notice/: command.py  event.py  model.py  query.py  router.py  schema.py  type.py  uow.py
app/application/user/: command.py  event.py  file.py  handler.py  model.py  query.py  router.py  schema.py  type.py  uow.py
app/common/: code.py  event.py  exception.py  model.py  schema.py  type.py
app/config/: config.py  logger.py
app/core/: config.py  exception.py  settings.py
app/dependencies/: auth.py  database.py  db.py  logger.py  orm.py
app/events/: admin.py  notice.py  user.py
app/models/: admin.py  base.py  notice.py  user.py
app/schemas/: admin.py  base.py  notice.py  user.py
app/services/: admin.py  notice.py  user.py
app/types/: base.py
app/utils/: datetime_utils.py  jwt.py  pagination.py  password.py  string.py
docs/: SERVER_DEPLOYMENT_GUIDE.md
dotenvs/: .env  .env.prod  .env.qa  .env.sandbox  .env.test
migrations/: V1__Create_admin.sql  V1__Create_admins.sql  V2__Create_user.sql  V2__Create_users.sql  V3__Create_notice.sql  V3__Create_notices.sql
serverless-env/: sandbox.json
sql/: admin.sql  member.sql  notice.sql
