[project]
name = "demo-fastapi"
version = "0.0.1"
authors = [
    { name="joony.kim", email="bestheroz@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (==0.135.1)",
    "pydantic (==2.12.5)",
    "pydantic-settings (==2.13.1)",
    "orjson (==3.11.7)",
    "mangum (==0.21.0)",
    "uvicorn (==0.42.0)",
    "hypercorn (==0.18.0)",
    "pymysql (==1.1.2)",
    "sqlalchemy (==2.0.48)",
    "uvloop (==0.22.1)",
    "httptools (==0.7.1)",
    "bcrypt (==5.0.0)",
    "sentry-sdk[fastapi] (==2.54.0)",
    "structlog (==25.5.0)",
    "pyjwt (==2.12.1)",
    "fastapi-events (==0.12.2)",
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pyright = "1.1.408"
mypy = "1.19.1"
ruff = "0.15.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

disable_error_code = 'empty-body'

exclude = [
    "node_modules/",
    "__pycache__/",
    "venv/",
]

[tool.pyright]
include = ["app"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/venv",
    "**/.venv"
]
defineConstant = { DEBUG = true }

reportMissingImports = false
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportMissingModuleSource = false

pythonVersion = "3.14"
pythonPlatform = "Linux"
