[project]
name = "demo-fastapi"
version = "0.0.1"
authors = [
    { name="joony.kim", email="bestheroz@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi==0.135.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "orjson==3.11.7",
    "mangum==0.21.0",
    "uvicorn==0.42.0",
    "hypercorn==0.18.0",
    "pymysql==1.1.2",
    "sqlalchemy==2.0.48",
    "uvloop==0.22.1",
    "httptools==0.7.1",
    "bcrypt==5.0.0",
    "sentry-sdk[fastapi]==2.54.0",
    "structlog==25.5.0",
    "pyjwt==2.12.1",
    "fastapi-events==0.12.2",
]

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
pyright = "1.1.408"
mypy = "1.19.1"
ruff = "0.15.7"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true

disable_error_code = 'empty-body'

exclude = [
    "node_modules/",
    "__pycache__/",
    "venv/",
]

[tool.pyright]
include = ["app"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/venv",
    "**/.venv"
]
defineConstant = { DEBUG = true }

reportMissingImports = false
reportMissingTypeStubs = false
reportGeneralTypeIssues = false
reportMissingModuleSource = false

pythonVersion = "3.14"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing -vv"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
env_override_existing_values = 1
env_files = [
    "dotenvs/.env",
    "dotenvs/.env.test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py314"
src = ["app"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-quotes
    "Q",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # Ruff-specific rules
    "RUF",
    # Performance
    "PERF",
    # Comprehensions
    "C4",
    # Miscellaneous
    "PIE",
    # Return statements
    "RET",
    # Print statements
    "T20",
    # flake8-logging
    "LOG",
    # flake8-use-pathlib
    "PTH",
    # flake8-datetime
    "DTZ",
    # flynt (f-string conversion)
    "FLY",
    # flake8-future-annotations
    "FA",
]
ignore = [
    "B008",
    "E501",
    "RET504",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"
